changed group header color, adjust event date spacing, fixed TaskViewFormatter to handle events outside of the normal week range.

--- a/src/katnote/resources/ui/application.css
+++ b/src/katnote/resources/ui/application.css
@@ -19,7 +19,7 @@
 }
 .TaskGroupHeaderText {
     -fx-font-family: "Sen ExtraBold";
-    -fx-text-fill: #FF9933;
+    -fx-text-fill: #EE7833;
     -fx-font-size: 18pt;	
 }
 .title {
